--- a/modules/10_ironmine_irm/app/views/irm/reports/_new_step_5.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/reports/_new_step_5.html.erb
@@ -30,8 +30,11 @@
           <td></td>
           <td style="text-align: left;">
             <fieldset>
-              <legend class="btn disabled">
-                <label><%= t(:label_irm_report_time_range) %></label>
+              <legend  class="input-append" style="border: none;padding: 0;">
+              <span class="add-on" style="border-radius:3px;">
+                <i class="icon-time"></i>
+                <%= t(:label_irm_report_time_range) %>
+              </span>
               </legend>
               <table class="detail-list">
                 <tr>
