--- a/modules/10_ironmine_irm/reports/views/irm/login_report/_params.html.erb
+++ b/modules/10_ironmine_irm/reports/views/irm/login_report/_params.html.erb
@@ -9,8 +9,11 @@
         </td>
         <td>
           <fieldset>
-            <legend>
-              <%= t(:label_irm_report_time_range) %>
+            <legend  class="input-append" style="border: none;padding: 0;">
+              <span class="add-on" style="border-radius:3px;">
+                <i class="icon-time"></i>
+                <%= t(:label_irm_report_time_range) %>
+              </span>
             </legend>
             <table>
               <tr>
