--- a/modules/20_incident_icm/reports/views/icm/highest_priority_incidents/_params.html.erb
+++ b/modules/20_incident_icm/reports/views/icm/highest_priority_incidents/_params.html.erb
@@ -1,14 +1,15 @@
-<table cellpadding="0" cellspacing="0" border="0" id="baseFilter">
+<table class="form-table" id="baseFilter" style="width: auto;">
   <tbody>
     <tr>
-      <td width="30%"></td>
-      <td></td>
       <td>
         <fieldset>
-          <legend><%= t(:label_irm_external_system) %> </legend>
+          <legend  class="input-append" style="border: none;padding: 0;">
+          <span class="add-on" style="border-radius:3px;">
+            <%= t(:label_irm_external_system) %>
+          </span>
+          </legend>
         <div style="white-space:nowrap">
-          <%= select_tag_multiple(
-                      "program_params[external_system_id][]",
+          <%= select_tag_multiple("program_params[external_system_id][]",
                       nullable_options_for_select(current_person_assessible_external_system_full, program_params[:external_system_id]),
                       "program_params[external_system_mul]",
                       program_params[:external_system_mul] ? program_params[:external_system_mul] : 'N')%>
@@ -17,8 +18,11 @@
       </td>
       <td>
         <fieldset>
-          <legend>
+          <legend  class="input-append" style="border: none;padding: 0;">
+          <span class="add-on" style="border-radius:3px;">
+            <i class="icon-time"></i>
             <%= t(:label_report_date_month) %>
+          </span>
           </legend>
           <table>
             <tr>
