--- a/modules/20_incident_icm/reports/views/icm/icm_average_processing_time/_html.html.erb
+++ b/modules/20_incident_icm/reports/views/icm/icm_average_processing_time/_html.html.erb
@@ -1,7 +1,7 @@
 <div id="reportChart"></div>
 
 <!--  irm datatable      -->
- <div class="irm-datatable">
+ <div class="datatable">
    <div>
        <table count="<%=datas[:datas].size%>">
          <thead>
