--- a/modules/20_incident_icm/reports/views/icm/icm_incident_amount_by_day/_html.html.erb
+++ b/modules/20_incident_icm/reports/views/icm/icm_incident_amount_by_day/_html.html.erb
@@ -1,12 +1,11 @@
 <div id="reportChart"></div>
-
 <!--  irm datatable      -->
- <div class="irm-datatable">
+ <div class="datatable">
    <div>
        <table count="<%=datas[:datas].size%>" style="width: auto">
          <thead>
          <tr>
-           <th style="width:250px;"><%=t(:label_report_icm_incident_report_date) + ':' + Date.today.to_s  %>
+           <th style="width:300px;"><%=t(:label_report_icm_incident_report_date) + ':' + Date.today.to_s  %>
              <br/>
              <%= "#{t(:label_statistic_date)}:" %> <br/>
              <%= "#{t(:label_irm_report_filter_date_from)} #{datas[:params][:date_from]} #{t(:label_irm_report_filter_date_to)} #{datas[:params][:date_to]}"%>
@@ -39,8 +38,8 @@
    </div>
  </div>
 <!--  end irm datatable      -->
-<% require_javascript(:extjs) %>
-<% require_css(:extjs) %>
+<%# require_javascript(:extjs) %>
+<%# require_css(:extjs) %>
 
 <script type="text/javascript">
   Ext.onReady(function(){
