--- a/modules/20_incident_icm/reports/views/icm/icm_incident_amount_by_day/_params.html.erb
+++ b/modules/20_incident_icm/reports/views/icm/icm_incident_amount_by_day/_params.html.erb
@@ -1,23 +1,23 @@
-<table cellpadding="0" cellspacing="0" border="0" id="baseFilter">
+<table class="form-table" id="baseFilter" style="width: auto;">
   <tbody>
     <tr>
-      <td width="30%"></td>
       <td>
         <fieldset>
-          <legend>
+          <legend  class="input-append" style="border: none;padding: 0;">
+          <span class="add-on" style="border-radius:3px;">
+            <i class="icon-time"></i>
             <%= t(:label_irm_report_time_range) %>
+          </span>
           </legend>
           <table>
             <tr>
               <td>
                 <label for="filterDateFrom"><%= t(:label_irm_report_filter_date_from) %></label>
-                <%= text_field_tag(:date_from,program_params[:date_from],:id=>"filterDateFrom",
-                                   :name=>"program_params[date_from]",:size=>12,:class=>"date")%>
+                <%= date_field_tag(:date_from,:value=>program_params[:date_from],:id=>"filterDateFrom",:name=>"program_params[date_from]",:nobutton=>true)%>
               </td>
               <td>
                 <label for="filterDateTo"><%= t(:label_irm_report_filter_date_to) %></label>
-                <%= text_field_tag(:date_to,program_params[:date_to],:id=>"filterDateTo",
-                                   :name=>"program_params[date_to]",:size=>12,:class=>"date")%>
+                <%= date_field_tag(:date_to,:value=>program_params[:date_to],:id=>"filterDateTo",:name=>"program_params[date_to]",:nobutton=>true)%>
               </td>
             </tr>
           </table>
