feature: 取消分类编码只能输入大写和下划线的限制

--- a/modules/20_incident_icm/app/views/icm/incident_categories/_new_form.html.erb
+++ b/modules/20_incident_icm/app/views/icm/incident_categories/_new_form.html.erb
@@ -6,7 +6,7 @@
       <tbody>
         <tr>
           <td class="label-col"><label for="code"><%=t(:label_icm_incident_category_code)%></label></td>
-          <td class="data-col"><%=f.text_field :code, :required=>true ,:irm_uppercase=>true,:id=>"code"%></td>
+          <td class="data-col"><%=f.text_field :code, :required=>true ,:id=>"code"%></td>
           <td class="label-col empty">&nbsp;</td>
           <td class="data-col empty">&nbsp;</td>
         </tr>
