--- a/modules/10_ironmine_irm/app/views/irm/session_settings/index.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/session_settings/index.html.erb
@@ -31,11 +31,12 @@
     <div class="page-block-body">
       <div class="sub-page-block">
         <!-- 一般信息 -->
+        <%= error_for @session_timeout %>
+        <%= flash_notice %>
         <div class="sub-page-block-header">
           <%= form_require_info %>
           <h3 class="sub-page-block-title"><%= t(:label_common_info) %></h3>
         </div>
-        <%= error_for @session_timeout %>
         <div class="sub-page-block-body">
           <%= content_for :form_block_common   %>
         </div>
