--- a/modules/10_ironmine_irm/app/views/irm/ldap_sources/_new_form.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/ldap_sources/_new_form.html.erb
@@ -6,20 +6,24 @@
           <tr>
             <td class="label-col"><label><%=(t :label_irm_ldap_source_name)%></label></td>
             <td class="data-col"><%=f.text_field :name,:required=>true%></td>
-            <td class="label-col"><label><%=t(:label_irm_ldap_source_account)%></label></td>
-            <td class="data-col"><%= f.text_field :account,:required=>true%></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
           </tr>
           <tr>
             <td class="label-col"><label><%=(t :label_irm_ldap_source_host)%></label></td>
             <td class="data-col"><%=f.text_field :host,:required=>true%></td>
-            <td class="label-col"><label><%=t(:label_irm_ldap_source_account_password)%></label></td>
-            <td class="data-col"><%= f.password_field :account_password,:required=>true%></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
           </tr>
           <tr>
             <td class="label-col"><label><%=(t :label_irm_ldap_source_port)%></label></td>
-            <td class="data-col"><%=f.text_field :port,:irm_numberonly=>true,:required=>true%></td>
+            <td class="data-col"><%=f.text_field :port,:irm_numberonly=>true,:required=>true,:class=>"input-small"%></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <tr>
             <td class="label-col"><label><%=t(:label_irm_ldap_source_base_dn)%></label></td>
-            <td class="data-col"><%= f.text_field :base_dn,:required=>true%></td>
+            <td class="data-3col" colspan="3"><%= f.text_field :base_dn,:required=>true,:class=>"input-xxlarge"%></td>
           </tr>
       </tbody>
     </table>
