--- a/modules/10_ironmine_irm/app/views/irm/ldap_sources/show.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/ldap_sources/show.html.erb
@@ -30,20 +30,26 @@
           <tr>
             <td class="label-col"><label><%=(t :label_irm_ldap_source_name)%></label></td>
             <td class="data-col"><%= @ldap_source.name%></td>
-            <td class="label-col"><label><%=t(:label_irm_ldap_source_account)%></label></td>
-            <td class="data-col"><%= @ldap_source.account%></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
           </tr>
           <tr>
             <td class="label-col"><label><%=(t :label_irm_ldap_source_host)%></label></td>
             <td class="data-col"><%= @ldap_source.host%></td>
-            <td class="label-col"><label><%=t(:label_irm_ldap_source_account_password)%></label></td>
-            <td class="data-col">******</td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
           </tr>
           <tr>
             <td class="label-col"><label><%=(t :label_irm_ldap_source_port)%></label></td>
             <td class="data-col"><%= @ldap_source.port%></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <tr>
             <td class="label-col"><label><%=t(:label_irm_ldap_source_base_dn)%></label></td>
             <td class="data-col"><%= @ldap_source.base_dn%></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
           </tr>
           <tr>
             <td class="label-col"><label><%=(t :active)%></label></td>
