1、给表格添加拖拽排序功能； 2、添加对mask遮罩是否显示的参数配置,当设置_dom_id=null即可不显示 3、修改系统表格操作列文字的样式

--- a/modules/10_ironmine_irm/app/views/irm/lookup_types/get_lookup_types.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/lookup_types/get_lookup_types.html.erb
@@ -1,7 +1,6 @@
 <%=datatable_view({:count=>@count,:datas=>@datas}) do |builder|%>
   <% builder.column(:id,{:title=>t(:operation), :width => "80px"}) do |data|%>
-    <%= link_to(t(:edit),{:action=>"edit",:id=>data[:id]}) %>&nbsp;
-    <%= link_to(t(:show),{:action=>"show",:id=>data[:id]}) %>
+    <%= link_to(t(:edit),{:action=>"edit",:id=>data[:id]},{:class => "action-link"}) %>&nbsp;|&nbsp;<%= link_to(t(:show),{:action=>"show",:id=>data[:id]},{:class => "action-link"}) %>
   <% end %>
   <% builder.column(:lookup_level,{:title=>t(:label_lookup_level), :width => "20%"})%>
   <% builder.column(:lookup_type,{:title=>t(:label_lookup_types_code), :width => "25%",:searchable=>true,:sortable=>true})%>
