--- a/modules/80_bootstrap_bsp/app/assets/stylesheets/framework/framework.css.less
+++ b/modules/80_bootstrap_bsp/app/assets/stylesheets/framework/framework.css.less
@@ -1118,6 +1118,17 @@ div.min-block-body {
     color: inherit;
 }
 
+
+.datatable table td a.action-link{
+    color:#015ba7;
+    text-decoration:none;
+    font-weight:normal
+}
+
+.datatable table td a.action-link:hover{
+    text-decoration:underline
+}
+
 .datatable table th.sortable {
     cursor: pointer;
 }
