--- a/modules/10_ironmine_irm/app/views/irm/people/get_data.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/people/get_data.html.erb
@@ -1,7 +1,6 @@
 <%=datatable_view({:count=>@count,:datas=>@datas}) do |builder|%>
   <% builder.column(:id,{:title=>t(:operation), :width => "80px"}) do |data|%>
-    <%= link_to(t(:edit),{:action=>"edit",:id=>data[:id]}) %>&nbsp;
-    <%= link_to(t(:show),{:action=>"show",:id=>data[:id]}) %>
+    <%= link_to(t(:edit),{:action=>"edit",:id=>data[:id]},{:class => "action-link"}) %>&nbsp;|&nbsp;<%= link_to(t(:show),{:action=>"show",:id=>data[:id]},{:class => "action-link"}) %>
   <% end %>
   <% builder.column(:person_name,{:title=>t(:label_irm_person_name),:searchable=>true, :width => "15%"})%>
   <% builder.column(:login_name,{:title=>t(:label_irm_person_login),:searchable=>true, :width => "15%"})%>
