--- a/modules/20_incident_icm/app/views/icm/assign_rules/get_data.html.erb
+++ b/modules/20_incident_icm/app/views/icm/assign_rules/get_data.html.erb
@@ -1,9 +1,6 @@
 <%=datatable_view({:count=>@count,:datas=>@datas}) do |builder|%>
-    <% builder.column(:id,{:title=>t(:operation), :width => "100px"}) do |data|%>
-        <%= bootstrap_icons("icon-arrow-up",t(:move_up),{:controller => "icm/assign_rules", :action => "up_rule", :id => data[:id]}) %>&nbsp;
-        <%= bootstrap_icons("icon-arrow-down",t(:move_down),{:controller => "icm/assign_rules", :action => "down_rule", :id => data[:id]}) %>&nbsp;
-        <%= bootstrap_icons("icon-eye-open",t(:show),{:controller => "icm/assign_rules", :action => "show", :id => data[:id]}) %>&nbsp;
-        <%= bootstrap_icons("icon-edit",t(:edit),{:controller => "icm/assign_rules", :action => "edit", :id => data[:id]}) %>
+    <% builder.column(:id,{:title=>t(:operation), :width => "90px"}) do |data|%>
+      <%= link_to(t(:edit),{:action=>"edit",:id=>data[:id]},{:class => "action-link"}) %>&nbsp;|&nbsp;<%= link_to(t(:show),{:action=>"show",:id=>data[:id]},{:class => "action-link"}) %>
     <% end %>
     <% builder.column(:support_group_id,{:title=>t(:label_icm_support_group)}) do |data| %>
         <%= support_group_name(data[:support_group_id]) %>
