--- a/modules/20_incident_icm/app/views/icm/assign_rules/index.html.erb
+++ b/modules/20_incident_icm/app/views/icm/assign_rules/index.html.erb
@@ -14,8 +14,7 @@
   </tr></table>
   <div class="page-block-body">
     <div id="assign_rules"></div>
-      <%= datatable("assign_rules",{:action=>"get_data"},[],{:search_box=>"searchBox",:paginator_box=>"paginator"})%>
-      <div id="paginator"></div>
+      <%= datatable("assign_rules",{:action=>"get_data"},[],{:search_box=>"searchBox",:drag_sort => {:save_url => "/assign_rules/switch_sequence"} })%>
   </div>
 </div>
 
