--- a/modules/10_ironmine_irm/app/views/irm/lookup_types/show.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/lookup_types/show.html.erb
@@ -53,7 +53,7 @@
   </table>
   <div class="page-block-body">
     <div id="lookup_value"></div>
-    <%= datatable("lookup_value",{:controller=>"irm/lookup_values",:action=>"get_lookup_values", :lookup_type=>@lookup_type.lookup_type},[],{:search_box=>"searchBox",:drag_sort => {:save_url => "/lookup_values/switch_sequence"} }) %>
+    <%= datatable("lookup_value",{:controller=>"irm/lookup_values",:action=>"get_lookup_values", :lookup_type=>@lookup_type.lookup_type},[],{:search_box=>"searchBox",:drag_sort => {:save_url => url_for(:controller => 'irm/lookup_values', :action => 'switch_sequence') } }) %>
   </div>
 </div>
 <%=render :partial=>"multilingual/show",:locals=>{:main_data=>@lookup_type} %>
