--- a/modules/10_ironmine_irm/app/views/irm/wf_actions/_relation_rule_process.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/wf_actions/_relation_rule_process.html.erb
@@ -9,8 +9,7 @@
 
   </tr></table>
   <div class="page-block-body">
-    <%= datatable("action_rules",{:controller => "irm/wf_rules", :action => "get_data_by_action", :action_type => action_type,:action_id=>action_id,:format=>"json"},
-                  [],{})%>
+    <%= datatable("action_rules",{:controller => "irm/wf_rules", :action => "get_data_by_action", :action_type => action_type,:action_id=>action_id,:format=>"json"},[],{})%>
   </div>
 </div>
 
