--- a/modules/10_ironmine_irm/app/views/irm/business_objects/_customize_object_attributes.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/business_objects/_customize_object_attributes.html.erb
@@ -1,7 +1,6 @@
 <%=datatable_view({:count=>datas.length,:datas=>datas}) do |builder|%>
-  <% builder.column(:id,{:title=>t(:operation), :width => "70px"}) do |data|%>
-       <%= link_to(t(:edit),{:controller => "irm/object_attributes", :action => "edit", :bo_id => @business_object.id,:id=>data[:id]}) %>
-       <%= link_to(t(:delete),{:controller => "irm/object_attributes", :action => "destroy", :bo_id => @business_object.id,:id=>data[:id]},{:method => :delete,:confirm => t(:label_are_you_sure)}) %>
+  <% builder.column(:id,{:title=>t(:operation), :width => "90px"}) do |data|%>
+       <%= link_to(t(:edit),{:controller => "irm/object_attributes", :action => "edit", :bo_id => @business_object.id,:id=>data[:id]},{:class => "action-link"}) %>&nbsp;|&nbsp;<%= link_to(t(:delete),{:controller => "irm/object_attributes", :action => "destroy", :bo_id => @business_object.id,:id=>data[:id]},{:method => :delete,:confirm => t(:label_are_you_sure),:class => "action-link"}) %>
   <% end %>
   <% builder.column(:name,{:title=>t(:label_irm_object_attribute_name),:searchable=>true}) do |data|%>
         <% if Irm::Constant::SYS_YES.eql?(data[:label_flag]) %>
