--- a/modules/10_ironmine_irm/app/views/irm/external_systems/get_data.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/external_systems/get_data.html.erb
@@ -1,7 +1,7 @@
 <%=datatable_view({:count=>@count,:datas=>@datas}) do |builder|%>
   <% builder.column(:id,{:title=>t(:operation), :width => "80px"}) do |data|%>
-    <%= link_to(t(:edit),{:action=>"edit",:id=>data[:id]}) %>&nbsp;
-    <%= link_to(t(:show),{:action=>"show",:id=>data[:id]}) %>
+    <%= link_to(t(:edit),{:action=>"edit",:id=>data[:id]},:class => "action-link") %>&nbsp;|
+    <%= link_to(t(:show),{:action=>"show",:id=>data[:id]},:class => "action-link") %>
   <% end %>
   <% builder.column(:external_system_code,{:title=>t(:label_irm_external_system_external_system_code),:searchable=>true, :width => "20%"})%>
   <% builder.column(:system_name,{:title=>t(:label_irm_external_system_system_name),:searchable=>true, :width => "25%"})%>
