--- a/modules/10_ironmine_irm/app/views/irm/functions/get_data.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/functions/get_data.html.erb
@@ -1,11 +1,11 @@
 <%=datatable_view({:count=>@count,:datas=>@datas}) do |builder|%>
     <% builder.column(:id,{:title=>t(:operation), :width => "80px"}) do |data|%>
         <% if params[:function_group_id].present? %>
-          <%= link_to(t(:edit),{:action=>"edit",:id=>data[:id]},{:back=>{:controller => "irm/function_groups",:action=>"show",:id=>params[:function_group_id]}}) %>
-          <%= link_to(t(:show),{:action=>"show",:id=>data[:id]},{:back=>{:controller => "irm/function_groups",:action=>"show",:id=>params[:function_group_id]}}) %>
+          <%= link_to(t(:edit),{:action=>"edit",:id=>data[:id]},{:class => "action-link",:back=>{:controller => "irm/function_groups",:action=>"show",:id=>params[:function_group_id]}}) %>&nbsp;|
+          <%= link_to(t(:show),{:action=>"show",:id=>data[:id]},{:class => "action-link",:back=>{:controller => "irm/function_groups",:action=>"show",:id=>params[:function_group_id]}}) %>
         <% else %>
-          <%= link_to(t(:edit),{:action=>"edit",:id=>data[:id]},{:back=>{:action=>"index"}}) %>
-          <%= link_to(t(:show),{:action=>"show",:id=>data[:id]},{:back=>{:action=>"index"}}) %>
+          <%= link_to(t(:edit),{:action=>"edit",:id=>data[:id]},{:class => "action-link",:back=>{:action=>"index"}}) %>&nbsp;|
+          <%= link_to(t(:show),{:action=>"show",:id=>data[:id]},{:class => "action-link",:back=>{:action=>"index"}}) %>
         <% end %>
     <% end %>
     <% builder.column(:code,{:title=>t(:code)})%>
