--- a/modules/10_ironmine_irm/app/views/irm/oauth_access_clients/show.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/oauth_access_clients/show.html.erb
@@ -1,71 +1,65 @@
 <%= page_title %>
-
-<div id="ep" class="detail-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
+<!--页面结构-->
+<div class="show-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%= t(:label_irm_oauth_access_client) %></h2>
+    </td>
+    <td class="page-block-button">
+      <%= link_to t(:edit), {:action => "edit", :id => @oauth_access_client},:class=>"btn btn-primary"%>
+      <%= link_to t(:back), {:action => "index"},:class=>"btn" %>
+    </td>
+  </tr></table>
+  <div class="page-block-body">
+    <table class="show-table">
       <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_irm_oauth_access_client) %></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= link_to t(:edit), {:action => "edit", :id => @oauth_access_client}%></div>
-            <div class="button"><%= link_to t(:back), {:action => "index"}%></div>
-          </td>
-        </tr>
+      <tr>
+        <td class="label-col"><label><%=(t :code)%></label></td>
+        <td class="data-col"><%=@oauth_access_client.code%></td>
+        <td class="label-col empty">&nbsp;</td>
+        <td class="data-col empty">&nbsp;</td>
+      </tr>
+      <tr>
+        <td class="label-col"><label><%=(t :name)%></label></td>
+        <td class="data-col"><%=@oauth_access_client.name%></td>
+        <td class="label-col empty">&nbsp;</td>
+        <td class="data-col empty">&nbsp;</td>
+      </tr>
+      <tr>
+        <td class="label-col"><label><%=(t :description)%></label></td>
+        <td class="data-col" colspan="4" style="width:82%"><%=@oauth_access_client.description%></td>
+      </tr>
+      <tr>
+        <td class="label-col"><label><%=(t :label_irm_oauth_access_client_site_image_url)%></label></td>
+        <td class="data-col"><%= @oauth_access_client.site_image_url%></td>
+        <td class="label-col empty">&nbsp;</td>
+        <td class="data-col empty">&nbsp;</td>
+      </tr>
+      <tr>
+        <td class="label-col"><label><%=(t :label_irm_oauth_access_client_site_url)%></label></td>
+        <td class="data-col"><%= @oauth_access_client.site_url%></td>
+        <td class="label-col empty">&nbsp;</td>
+        <td class="data-col empty">&nbsp;</td>
+      </tr>
+      <tr>
+        <td class="label-col"><label><%=(t :label_irm_oauth_access_client_callback_url)%></label></td>
+        <td class="data-col"><%= @oauth_access_client.callback_url%></td>
+        <td class="label-col empty">&nbsp;</td>
+        <td class="data-col empty">&nbsp;</td>
+      </tr>
+      <tr>
+        <td class="label-col"><label><%=(t :label_irm_oauth_access_client_token)%></label></td>
+        <td class="data-col"><%=@oauth_access_client.token%></td>
+        <td class="label-col empty">&nbsp;</td>
+        <td class="data-col empty">&nbsp;</td>
+      </tr>
+      <tr>
+        <td class="label-col"><label><%=(t :label_irm_oauth_access_client_secret)%></label></td>
+        <td class="data-col"><%=@oauth_access_client.secret%></td>
+        <td class="label-col empty">&nbsp;</td>
+        <td class="data-col empty">&nbsp;</td>
+      </tr>
       </tbody>
     </table>
-  </div>
-  <div class="pbBody">
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-        <tr>
-                  <td class="labelCol"><label><%=(t :code)%></label></td>
-                  <td class="dataCol"><%=@oauth_access_client.code%></td>
-                  <td class="labelCol empty">&nbsp;</td>
-                  <td class="dataCol empty">&nbsp;</td>
-                </tr>
-                <tr>
-                  <td class="labelCol"><label><%=(t :name)%></label></td>
-                  <td class="dataCol"><%=@oauth_access_client.name%></td>
-                  <td class="labelCol empty">&nbsp;</td>
-                  <td class="dataCol empty">&nbsp;</td>
-                </tr>
-                <tr>
-                  <td class="labelCol"><label><%=(t :description)%></label></td>
-                  <td class="dataCol" colspan="4" style="width:82%"><%=@oauth_access_client.description%></td>
-                </tr>
-                <tr>
-                  <td class="labelCol"><label><%=(t :label_irm_oauth_access_client_site_image_url)%></label></td>
-                  <td class="dataCol"><%= @oauth_access_client.site_image_url%></td>
-                  <td class="labelCol empty">&nbsp;</td>
-                  <td class="dataCol empty">&nbsp;</td>
-                </tr>
-                <tr>
-                  <td class="labelCol"><label><%=(t :label_irm_oauth_access_client_site_url)%></label></td>
-                  <td class="dataCol"><%= @oauth_access_client.site_url%></td>
-                  <td class="labelCol empty">&nbsp;</td>
-                  <td class="dataCol empty">&nbsp;</td>
-                </tr>
-                <tr>
-                  <td class="labelCol"><label><%=(t :label_irm_oauth_access_client_callback_url)%></label></td>
-                  <td class="dataCol"><%= @oauth_access_client.callback_url%></td>
-                  <td class="labelCol empty">&nbsp;</td>
-                  <td class="dataCol empty">&nbsp;</td>
-                </tr>
-                <tr>
-                  <td class="labelCol"><label><%=(t :label_irm_oauth_access_client_token)%></label></td>
-                  <td class="dataCol"><%=@oauth_access_client.token%></td>
-                  <td class="labelCol empty">&nbsp;</td>
-                  <td class="dataCol empty">&nbsp;</td>
-                </tr>
-                <tr>
-                  <td class="labelCol"><label><%=(t :label_irm_oauth_access_client_secret)%></label></td>
-                  <td class="dataCol"><%=@oauth_access_client.secret%></td>
-                  <td class="labelCol empty">&nbsp;</td>
-                  <td class="dataCol empty">&nbsp;</td>
-                </tr>
-        </tbody>
-      </table>
-    </div>
   </div>
 </div>
