--- a/modules/10_ironmine_irm/app/views/irm/report_type_categories/get_data.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/report_type_categories/get_data.html.erb
@@ -1,7 +1,6 @@
 <%=datatable_view({:count=>@count,:datas=>@datas}) do |builder|%>
-  <% builder.column(:id,{:title=>t(:operation), :width => "70px"}) do |data|%>
-    <%= link_to(t(:edit),{:action=>"edit",:id=>data[:id]}) %>&nbsp;
-    <%= link_to(t(:show),{:action=>"show",:id=>data[:id]}) %>
+  <% builder.column(:id,{:title=>t(:operation), :width => "90px"}) do |data|%>
+    <%= link_to(t(:edit),{:action=>"edit",:id=>data[:id]},{:class => "action-link"}) %>&nbsp;|&nbsp;<%= link_to(t(:show),{:action=>"show",:id=>data[:id]},{:class => "action-link"}) %>
   <% end %>
   <% builder.column(:code,{:title=>t(:label_irm_report_type_category_code),:searchable=>true})%>
   <% builder.column(:name,{:title=>t(:label_irm_report_type_category_name),:searchable=>true})%>
