--- a/modules/10_ironmine_irm/app/views/irm/wf_approval_processes/_active_processes.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/wf_approval_processes/_active_processes.html.erb
@@ -1,6 +1,6 @@
 <%=datatable_view({:count=>processes.count,:datas=>processes}) do |builder|%>
     <% builder.column(:id,{:title=>t(:operation), :width => "80px"}) do |data|%>
-        <%= link_to(t(:disable),{:action=>"active",:id=>data.id,:active=>Irm::Constant::SYS_NO,:back_url=>url_for({})}) %>
+        <%= link_to(t(:disable),{:action=>"active",:id=>data.id,:active=>Irm::Constant::SYS_NO,:class => "action-link",:back_url=>url_for({})}) %>
     <% end %>
     <% builder.column(:process_order,{:title=>t(:label_irm_wf_approval_process_process_order)}) do |data|%>
         <%= text_field_tag("process_orders[#{data.id}]",data.process_order,:size=>5) %>
