--- a/modules/10_ironmine_irm/app/views/irm/wf_rules/get_data.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/wf_rules/get_data.html.erb
@@ -1,7 +1,7 @@
 <%=datatable_view({:count=>@count,:datas=>@datas}) do |builder|%>
     <% builder.column(:id,{:title=>t(:operation), :width => "80px"}) do |data|%>
-          <%= link_to(t(:edit),{:action=>"edit",:id=>data[:id]},{:back=>{:action=>"index"}}) %>
-          <%= link_to(t(:show),{:action=>"show",:id=>data[:id]},{:back=>{:action=>"index"}}) %>
+      <%= link_to(t(:edit),{:action=>"edit",:id=>data[:id]},{:class => "action-link",:back=>{:action=>"index"}}) %>&nbsp;|&nbsp;
+      <%= link_to(t(:show),{:action=>"show",:id=>data[:id]},{:class => "action-link",:back=>{:action=>"index"}}) %>
     <% end %>
     <% builder.column(:bo_name,{:title=>t(:label_irm_wf_rule_bo_code),:searchable=>true})%>
     <% builder.column(:rule_code,{:title=>t(:label_irm_wf_rule_rule_code),:searchable=>true})%>
