--- a/modules/20_incident_icm/app/views/icm/incident_statuses/get_data.html.erb
+++ b/modules/20_incident_icm/app/views/icm/incident_statuses/get_data.html.erb
@@ -1,7 +1,7 @@
 <%=datatable_view({:count=>@count,:datas=>@datas}) do |builder|%>
   <% builder.column(:id,{:title=>t(:operation), :width => "80px"}) do |data|%>
-    <%= link_to(t(:edit),{:action=>"edit",:id=>data[:id]}) %>&nbsp;
-    <%= link_to(t(:show),{:action=>"show",:id=>data[:id]}) %>
+    <%= link_to(t(:edit),{:action=>"edit",:id=>data[:id]},:class => "action-link") %>&nbsp;|
+    <%= link_to(t(:show),{:action=>"show",:id=>data[:id]},:class => "action-link") %>
   <% end %>
   <% builder.column(:phase_name,{:title=>t(:label_icm_incident_status_phase_code),:searchable=>true})  %>
   <% builder.column(:incident_status_code,{:title=>t(:label_icm_incident_status_incident_status_code),:searchable=>true})%>
