--- a/modules/60_config_com/app/views/com/config_attributes/get_data.html.erb
+++ b/modules/60_config_com/app/views/com/config_attributes/get_data.html.erb
@@ -1,7 +1,7 @@
-<%=datatable_view({:count=>@count,:datas=>@datas}) do |builder|%>
+<%=datatable_view({:count=>@count,:datas=>@datas.values}) do |builder|%>
   <% builder.column(:id,{:title=>t(:operation), :width => "80px"}) do |data|%>
-    <%= link_to(t(:edit),{:action=>"edit",:id=>data[:id]}) %>&nbsp;
-    <%= link_to(t(:show),{:action=>"show",:id=>data[:id]}) %>
+    <%= link_to(t(:edit),{:action=>"edit",:id=>data[:id]},:class => "action-link") %>&nbsp;|
+    <%= link_to(t(:show),{:action=>"show",:id=>data[:id]},:class => "action-link") %>
   <% end %>
   <% builder.column(:code,{:title=>t(:label_com_config_attribute_code),:searchable=>true, :width => "15%"})%>
   <% builder.column(:name,{:title=>t(:label_com_config_attribute_name),:searchable=>true}) do |data|%>
