--- a/modules/60_config_com/app/views/com/config_classes/_leveled_config_classes.html.erb
+++ b/modules/60_config_com/app/views/com/config_classes/_leveled_config_classes.html.erb
@@ -1,10 +1,10 @@
 <%=datatable_view({:count=>datas.length,:datas=>datas}) do |builder|%>
   <% builder.column(:id,{:title=>t(:operation),:width=>"80px"}) do |data|%>
-    <%= link_to(t(:edit),{:action=>"edit",:id=>data[:id]}) %>&nbsp;
-    <%= link_to(t(:show),{:action=>"show",:id=>data[:id]}) %>
+    <%= link_to(t(:edit),{:action=>"edit",:id=>data[:id]},:class => "action-link") %>&nbsp;|
+    <%= link_to(t(:show),{:action=>"show",:id=>data[:id]},:class => "action-link") %>
   <% end %>
   <% builder.column(:name,{:title=>t(:label_com_config_class_name)}) do |data| %>
-        <% (data.level||0).times do %>&nbsp;&nbsp;&nbsp;&nbsp;<%end%><%= data[:name] %>
+    <% (data.level||0).times do %>&nbsp;&nbsp;&nbsp;&nbsp;<%end%><%= data[:name] %>
   <% end %>
   <% builder.column(:parent_name,{:title=>t(:label_com_config_class_parent)})%>
   <% builder.column(:description,{:title=>t(:description)})%>
