进一步完善可拖拽表格，解决： 1、可拖拽表格中的文本内容无法复制； 2、拖拽过程中拖拽项不够明显； 3、拖拽后不进行立即保存

--- a/modules/80_bootstrap_bsp/app/assets/stylesheets/framework/framework.css.less
+++ b/modules/80_bootstrap_bsp/app/assets/stylesheets/framework/framework.css.less
@@ -1198,6 +1198,11 @@ div.min-block-body {
     background-color: #EDF5FF;
 }
 
+.drag-able .datatable tbody tr:hover{
+    background-color: #DAECF6;
+    border: 2px dotted #ff0000;
+}
+
 .datatable table th > div {
     white-space: nowrap;
 }
@@ -1209,6 +1214,21 @@ div.min-block-body {
     overflow: visible; /*to make ths where the title is really long work*/
     line-height: auto;
 }
+
+.page-block.drag-able .table-body table {
+    border: 2px dashed gray;
+//    z-index: 1050;
+//    position: absolute;
+}
+
+.drag-able .page-block-help {
+    display: none;
+}
+
+.drag-able .datatable table td {
+    border-bottom: 1px dashed #c2c0c0;
+}
+
 
 .datatable table td {
     margin: 0;
