系统中的富文本编辑器focus和blur添加bootstrap风格样式

--- a/app/views/helper/_xheditor.html.erb
+++ b/app/views/helper/_xheditor.html.erb
@@ -45,8 +45,11 @@
           <% if shortcuts -%>
           shortcuts:{'ctrl+enter':submitForm},
           <% end -%>
-          upImgExt:'jpg,jpeg,gif,png'
+          upImgExt:'jpg,jpeg,gif,png',
+          focus: function(){$(".xheLayout",$("#<%=textarea_id%>").parent()).addClass("focused")},
+          blur: function(){$(".xheLayout",$("#<%=textarea_id%>").parent()).removeClass("focused")}
 
       });
+      editor.focus();
     });
 </script>
