--- a/modules/80_bootstrap_bsp/app/assets/stylesheets/plugins/xheditor/ui.css
+++ b/modules/80_bootstrap_bsp/app/assets/stylesheets/plugins/xheditor/ui.css
@@ -1,6 +1,15 @@
 .xhe_default table, .xhe_default tr, .xhe_default td, .xhe_default iframe {border:0; margin:0; padding:0; background:transparent;text-decoration:none; font-weight:normal; color:#000}
 
 .xhe_default table.xheLayout {display:inline-table;background:#F0F0EE; border:1px solid #C5C5C5;width:100%;height:100%;}
+.xhe_default table.xheLayout.focused {
+    border:1px solid rgba(82, 168, 236, 0.8);
+    outline: 0;
+    outline: thin dotted \9;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
+    -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
+}
+
 .xhe_default td.xheTool{padding:0px 3px;border-bottom:1px solid #C5C5C5;}
 .xhe_default td.xheTool span{float:left;margin:2px 0px;}
 .xhe_default td.xheTool br{clear:left;}
