对插件upload_file_sample中添加对文件大小的显示

--- a/app/views/helper/_upload_file.html.erb
+++ b/app/views/helper/_upload_file.html.erb
@@ -64,7 +64,7 @@
   <tr class="file-item" ref="${sequence}">
     <td style="_width:100px;">
       <span class="file-name">
-        <a target="_blank" href="${fileUrl}">${fileName}</a>
+        <a target="_blank" href="${fileUrl}">${fileName}</a>&nbsp;(${fileSize})
       </span>
       <span class="file-cell"></span>
     </td>
