--- a/app/views/helper/_upload_file_sample.html.erb
+++ b/app/views/helper/_upload_file_sample.html.erb
@@ -63,7 +63,11 @@
   </tbody>
   <tbody class="file-template" style="display:none" id="file-template">
       <tr class="file-item" ref="${sequence}">
-        <td><span class="file-name"><a target="_blank" href="${fileUrl}">${fileName}</a></span><span class="file-cell"></span></td>
+        <td>
+          <span class="file-name">
+            <a target="_blank" href="${fileUrl}">${fileName}&nbsp;(${fileSize})</a>
+          </span>
+          <span class="file-cell"></span></td>
         <td class="file-description">
           <input type="hidden" value="${attachmentId}" name="${ref}[${sequence}][id]"/>
           <input type="text" name="${ref}[${sequence}][description]" size="30"/></td>
