给变更单列表中的数据添加样式设置tr样式：vertical-align: top;

--- a/modules/50_change_chm/app/views/chm/change_requests/get_data.html.erb
+++ b/modules/50_change_chm/app/views/chm/change_requests/get_data.html.erb
@@ -51,5 +51,8 @@
     <% builder.column(:external_system_id_, {:title => t(:label_chm_change_request_external_system), :width => "130px"}) do |data| %>
         <%= data.external_system_id_label %>
     <% end %>
+    <% builder.row do |data|%>
+        style="vertical-align: top;"
+    <% end %>
 <% end %>
 
