给知识库状态列表的tr添加其对应的背景颜色并在显示页面显示颜色

--- a/modules/20_incident_icm/app/views/icm/incident_statuses/show.html.erb
+++ b/modules/20_incident_icm/app/views/icm/incident_statuses/show.html.erb
@@ -36,8 +36,8 @@
           <tr>
             <td class="label-col"><label><%=(t :status)%></label></td>
             <td class="data-col"><%= @incident_status[:status_meaning]%></td>
-            <td class="label-col empty">&nbsp;</td>
-            <td class="data-col empty">&nbsp;</td>
+            <td class="label-col"><label><%=t(:display_color)%></label></td>
+            <td class="data-col"><div style="width: 40px; height: 20px; background-color: <%= @incident_status.display_color %>;"></div></td>
           </tr>
       </tbody>
     </table>
