--- a/modules/30_knowledge_skm/app/views/skm/entry_statuses/_edit_form.html.erb
+++ b/modules/30_knowledge_skm/app/views/skm/entry_statuses/_edit_form.html.erb
@@ -29,7 +29,7 @@
           </tr>
           <tr>
             <td class="label-col"><%= t(:display_color) %></td>
-            <td class="data-col"><%= f.color_field :display_color,:value=>"#04fcc1" %></td>
+            <td class="data-col"><%= f.color_field :display_color %></td>
             <td class="label-col empty">&nbsp;</td>
             <td class="data-col empty">&nbsp;</td>
           </tr>
