--- a/modules/10_ironmine_irm/app/views/irm/watchers/_sidebar_watcher_list.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/watchers/_sidebar_watcher_list.html.erb
@@ -4,7 +4,7 @@
     <%= form_tag({:controller => "irm/watchers", :action => "add_watcher", :watchable_id => watchable.id,:_dom_id=>dom_id,:editable=>editable}, :remote => true) do %>
       <div class="sidebar-block">
           <div class="sidebar-block-header">
-            <h2><%= t :label_irm_watcher %><%= ("(" + watchers_size(watchable).to_s + ")")%> > <a href="javascript:void(0);" id="add_watcher_self" style="color:white;">自己</a></h2>
+            <h2><%= t :label_irm_watcher %><%= ("(" + watchers_size(watchable).to_s + ")")%> > <a href="javascript:void(0);" id="add_watcher_self" style="color:white;"><%= I18n.t(:self) %></a></h2>
           </div>
           <div class="sidebar-block-body">
             <% if l_editable %>
