--- a/modules/80_bootstrap_bsp/app/assets/stylesheets/bootstrap/bootstrap-override.less
+++ b/modules/80_bootstrap_bsp/app/assets/stylesheets/bootstrap/bootstrap-override.less
@@ -5,6 +5,7 @@
 // Set the correct sprite paths
 @iconSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings.png');
 @iconWhiteSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings-white.png');
+@loadingCirclePath: asset-path('twitter/bootstrap/loading-circle.gif');
 // Your custom LESS stylesheets goes here
 //
 // Since bootstrap was imported above you have access to its mixins which
@@ -64,6 +65,22 @@ input, textarea, select, .uneditable-input {
     width: 100%;
     height: 100%;
     zoom: 1;
+}
+
+.modal{
+    .form-table {
+        width: auto;
+    }
+    .page-block {
+        border: none;
+        background-color: #ffffff;
+    }
+}
+.loading-circle {
+    margin: 0 auto;
+    background: url(@loadingCirclePath);
+    width: 32px;
+    height: 32px;
 }
 
 h3.popover-title{
