--- a/modules/10_ironmine_irm/app/views/irm/wf_approval_processes/_ap_recall_actions.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/wf_approval_processes/_ap_recall_actions.html.erb
@@ -7,10 +7,13 @@
       <% unless @wf_approval_process.enabled? %>
           <div class="btn-toolbar">
             <div class="btn-group">
-              <%= link_to(t(:label_irm_wf_approval_process_add_exists_action),{:action => "add_exists_action",:source_str=>"AP_RECALL,#{@wf_approval_process.id}"},:back=>true,:class=>"btn") %>
+              <%= link_to(t(:label_irm_wf_approval_process_add_exists_action),{:action => "add_exists_action",:source_str=>"AP_RECALL,#{@wf_approval_process.id}"},:back=>true,:class=>"btn btn-info") %>
             </div>
             <div class="btn-group">
-              <button data-toggle="dropdown" class="btn dropdown-toggle"><%= t(:label_irm_wf_approval_add_actions)  %><span class="caret"></span></button>
+              <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#">
+                <%= t(:label_irm_wf_approval_add_actions) %>
+                <span class="caret"></span>
+              </a>
               <ul class="dropdown-menu">
                 <li><%= link_to(t(:label_irm_wf_mail_alert_new),{:controller => "irm/wf_mail_alerts",:action => "new",:source_str=>"AP_RECALL,#{@wf_approval_process.id}"},:back=>true) %></li>
                 <li><%= link_to(t(:label_irm_wf_field_update_new),{:controller => "irm/wf_field_updates",:action => "new",:source_str=>"AP_RECALL,#{@wf_approval_process.id}"},:back=>true) %></li>
@@ -20,14 +23,7 @@
       <% else %>
           <div class="btn-toolbar">
             <div class="btn-group">
-              <%= link_to(t(:label_irm_wf_approval_process_add_exists_action),{},:disabled=>true) %>
-            </div>
-            <div class="btn-group">
-              <button data-toggle="dropdown" class="btn dropdown-toggle disabled">
-                <%= t(:label_irm_wf_approval_add_actions)  %><span class="caret"></span>
-              </button>
-              <ul class="dropdown-menu">
-              </ul>
+              <%= link_to(t(:label_irm_wf_approval_process_add_exists_action),{},:disabled=>true,:class=>"btn btn-info") %>
             </div>
           </div>
       <% end %>
