--- a/modules/10_ironmine_irm/app/views/irm/wf_approval_processes/_show_process_actions.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/wf_approval_processes/_show_process_actions.html.erb
@@ -1,14 +1,14 @@
 <%=datatable_view({:count=>actions.count,:datas=>actions}) do |builder|%>
-    <% builder.column(:id,{:title=>t(:operation), :width => "80px"}) do |data|%>
-        <%= link_to(t(:edit),data[:edit_url_options]) %>
+    <% builder.column(:id,{:title=>t(:operation), :width => "120px"}) do |data|%>
+        <%= link_to(t(:edit),data[:edit_url_options],:class =>"action-link") %>&nbsp;|
+        <%= link_to(t(:show),data[:show_url_options],:class =>"action-link") %>
         <% unless @wf_approval_process.enabled? %>
-            <%= link_to(t(:delete),data[:delete_url_options],{:confirm => t(:label_are_you_sure) ,:method => :delete} )%>
-        <% else %>
-            <%= t(:delete) %>
+            |
+            <%= link_to(t(:delete),data[:delete_url_options],{:confirm => t(:label_are_you_sure) ,:method => :delete, :class =>"action-link"} )%>
         <% end %>
     <% end %>
     <% builder.column(:action_type_name,{:title=>t(:label_irm_wf_rule_action_type)})%>
     <% builder.column(:description,{:title=>t(:label_irm_wf_rule_action_description)}) do |data|%>
-        <%= link_to(data[:ref_action].name,data[:show_url_options]) %>
+        <%= data[:ref_action].name %>
     <% end %>
 <% end %>
