--- a/modules/10_ironmine_irm/app/views/irm/wf_approval_processes/show.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/wf_approval_processes/show.html.erb
@@ -17,7 +17,7 @@
     </td>
     <td class="page-block-button">
       <% unless @wf_approval_process.enabled? %>
-          <%= link_to t(:edit), {:action => "edit", :id => @wf_approval_process.id},:back=>true,:class=>"btn" %>
+          <%= link_to t(:edit), {:action => "edit", :id => @wf_approval_process.id},:back=>true,:class=>"btn btn-primary" %>
       <% else %>
           <%= link_to t(:edit), {}, :disabled => true,:class=>"btn" %>
       <% end %>
