--- a/modules/20_incident_icm/app/views/icm/incident_journals/edit_upgrade.html.erb
+++ b/modules/20_incident_icm/app/views/icm/incident_journals/edit_upgrade.html.erb
@@ -10,8 +10,7 @@
             </td>
             <td class="label-col"><label for="incident_request_support_person_id"><%=t(:label_icm_incident_request_support_person)%></label></td>
             <td class="data-col">
-              <%=f.blank_select :support_person_id,available_upgradable_supporter(@incident_request.support_group_id||0),
-                                                  {},{:id=>"incident_request_support_person_id"}%>
+              <%=f.blank_select :support_person_id,available_upgradable_supporter(@incident_request.support_group_id||0),{},{:id=>"incident_request_support_person_id"}%>
             </td>
             <td class="label-col"></td>
             <td class="data-col"></td>
