修复审批流程管理页面元素布局错位

--- a/modules/10_ironmine_irm/app/views/irm/wf_approval_processes/_ap_sumit_actions.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/wf_approval_processes/_ap_sumit_actions.html.erb
@@ -25,10 +25,8 @@
           <%= link_to(t(:label_irm_wf_approval_process_add_exists_action),{:action => "add_exists_action",:source_str=>"AP_SUBMIT,#{@wf_approval_process.id}"},:back=>true,:class=>"btn btn-info disabled") %>
           </div>
       <% end %>
-
     </td>
-    <td class="page-block-help">
-    </td>
+    <td class="page-block-help"></td>
   </tr></table>
   <div class="page-block-body">
     <%= render :partial => "show_process_actions",:locals => {:actions=>wf_process_actions("AP_SUBMIT",@wf_approval_process.id)} %>
