--- a/modules/10_ironmine_irm/app/views/irm/wf_approval_processes/_ap_step_reject_actions.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/wf_approval_processes/_ap_step_reject_actions.html.erb
@@ -22,7 +22,9 @@
           </div>
       <% else %>
           <div class="btn-toolbar">
-            <%= link_to(t(:label_irm_wf_approval_process_add_exists_action),{},:back=>true,:class=>"btn disabled") %>
+            <div class="btn-group">
+              <%= link_to(t(:label_irm_wf_approval_process_add_exists_action),{},:back=>true,:class=>"btn disabled") %>
+            </div>
           </div>
       <% end %>
 
